syntax = "proto3";
package kratos.api;

option go_package = "github.com/star-table/go-table/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  string env = 1;
  Server server = 2;
  Data data = 3;
  ThirdParty third_party = 4;
  Log log = 5;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string dsn = 2;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration read_timeout = 3;
    google.protobuf.Duration write_timeout = 4;
    string password = 5;
    int32 db = 6;
    bool is_sentinel = 7;
    string master_name = 8;
  }
  message Facade {
      string app_server = 1;
      string datacenter_server = 2;
      string form_server = 3;
      string permission_server = 4;
      string usercenter_server = 5;
      string msgsvc_server = 6;
      string go_permission_server = 7;
      string go_push_server = 8;
      string project_server = 9;
  }

  Redis redis = 1;
  map<string,Database> database = 2;
  Facade facade = 3;
}

message ThirdParty {
  message Sentry {
    string dsn = 1;
  }
  message Jaeger {
    string http_endpoint = 1;
    string udp_address = 2;
    string trace_service = 3;
    string sampler_type = 4;
    float sampler_param = 5;
  }

  Sentry sentry = 1;
  Jaeger jaeger = 2;
}

message Log {
  string path = 1;
}
